feat: 实现了根据 ejs 动态写入 nginx 配置文件

--- a/template/default.conf.ejs
+++ b/template/default.conf.ejs
@@ -1,6 +1,15 @@
 server {
-  listen       80 default_server;
-  listen  [::]:80 default_server;
-  server_name  _;
-  return 403; # 禁止通过IP直接访问
+    listen       80 default_server;
+    listen  [::]:80 default_server;
+    server_name  _;
+    # return 403; # 禁止通过IP直接访问
+
+    # 指定网站的根目录和索引文件
+    root /usr/share/nginx/html;
+    index index.html;
+
+    error_page   500 502 503 504  /50x.html;
+    location / {
+        try_files $uri $uri/ =404;
+    }
 }
