--- a/template/server.conf.ejs
+++ b/template/server.conf.ejs
@@ -1,16 +1,17 @@
 server {
-  listen       80;
-  listen  [::]:80;
-  server_name  <%= server_name %>;
+    listen       80;
+    listen  [::]:80;
+    # 此处可以通过使用 http://dev.my-project.192.168.121.141.nip.io 来访问到
+    server_name  ~^(?<subdomain>.*<%= server_tag %>\<%= server_name %>.*)$;
 
-  location / {
-      root   <%= root %>;
-      index  <%= index %>;
-      try_files $uri $uri/ /index.html;
-  }
+    location / {
+        root   /usr/share/nginx/html/<%= server_name %>/dev;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
 
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-      root   /usr/share/nginx/html;
-  }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
 }
